--- a/template_P3.csproj
+++ b/template_P3.csproj
@@ -66,11 +66,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="game.cs" />
     <Compile Include="mesh.cs" />
     <Compile Include="meshLoader.cs" />
     <Compile Include="quad.cs" />
     <Compile Include="rendertarget.cs" />
+    <Compile Include="SceneObject.cs" />
+    <Compile Include="SceneGraph.cs" />
     <Compile Include="shader.cs" />
     <Compile Include="surface.cs" />
     <Compile Include="template.cs" />
