--- a/template_P3.csproj
+++ b/template_P3.csproj
@@ -68,6 +68,8 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="game.cs" />
+    <Compile Include="GraphObjects.cs" />
+    <Compile Include="Light.cs" />
     <Compile Include="mesh.cs" />
     <Compile Include="meshLoader.cs" />
     <Compile Include="quad.cs" />
