--- a/template_P3.csproj
+++ b/template_P3.csproj
@@ -87,8 +87,10 @@
     <None Include="packages.config" />
     <None Include="shaders\fs.glsl" />
     <None Include="shaders\fs_post.glsl" />
+    <None Include="shaders\fs_skydome.glsl" />
     <None Include="shaders\vs.glsl" />
     <None Include="shaders\vs_post.glsl" />
+    <None Include="shaders\vs_skydome.glsl" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
